style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral+SC:ital,wght@0,200;0,300;0,500;0,600;0,700;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
html {
  box-sizing: border-box;
  overflow-x: hidden;
  margin: 0;
}

body {
  margin: 0;
  background-color: black;
  color: white;
  font-family: 'Roboto', sans-serif;
}

h1,h2 {
  margin: 0;
  color: #5A5A5A;
  letter-spacing: 01rem;
  font-weight: 400; 
}

h1 {
  font-size: 2.5rem;
}

a {
  color: #9C8853;
  outline: none;
  text-decoration: none;
  margin: 1rem;
}

a:hover {
  text-decoration: underline;
}

/* Nav */
#logo {
  font-family: "Spectral+SC";
  font-size: 1.7rem;
  max-height: 25vh;
  padding: 2rem 0 0 2rem;
}

/* Card Video */
.videoContainer {
  width: 100%;
}
video {
  width: 100%;
  height: 100vh;
}

/* Card Header */
#header{
  margin-top: 1rem;
  text-align: center; 
}

/* Edition */
#editionContainer {
  margin-top: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; 
}

.edition {
  font-size: 2rem;
  color: white;
  letter-spacing: 0.5rem;
  display: block;
}

.btnContainer {
  margin-top: 2rem;
}

#footerContainer {
  padding: 0 0 0 2rem;
  margin-top: 50vh;
  width: 30%;
  display: flex;
  flex-direction: row;
  justify-content: left;
  justify-content: space-between;
}
/* 
#footerContainer a {
  color:white;
  font-weight: 300;
} */

#footerContainer p, #footerContainer a {
  color:#5A5A5A;
  font-weight: 400;
}

